修改创新管理

--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -122,7 +122,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center"><span>能力中心</span>我们的活动</h1>
-							<p class="lead">能力中心通过组织线上线下各种活动，促进了各个交付部的横向沟通。</p>
+							<p class="lead">能力中心通过组织线上线下各种活动，促进了各个交付部的横向沟通，增进了部门同事间的交流，更好地构建了部门文化。</p>
 						</div>
 					</div>
 				</div>
@@ -168,35 +168,39 @@
 
 						<!-- portfolio items start -->
 						<div class="isotope-container row grid-space-20">
-							<div class="col-sm-6 col-md-3 isotope-item ">
+
+							<div class="col-sm-6 col-md-3 isotope-item site-building">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/9.jpg" alt="">
-										<a class="overlay" data-toggle="modal" data-target="#project-1">
+										<img src="images/21.jpg" alt="">
+										<a class="overlay" data-toggle="modal" data-target="#project-10">
 											<i class="fa fa-search-plus"></i>
-											<span>袁家村</span>
+											<span>Knownledge Building</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">集体出游</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-10">聚慧大讲堂开幕式</a>
 								</div>
 								<!-- Modal -->
-								<div class="modal fade" id="project-1" tabindex="-1" role="dialog" aria-labelledby="project-1-label" aria-hidden="true">
+								<div class="modal fade" id="project-10" tabindex="-1" role="dialog" aria-labelledby="project-10-label" aria-hidden="true">
 									<div class="modal-dialog modal-lg">
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-1-label">袁家村一日游</h4>
+												<h4 class="modal-title" id="project-10-label">集百家之长，成一家之言，寻智慧之巅</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>春暖花开，正是出游的好时节！为了丰富员工的业余文化生活，增进员工之间的相互交流与沟通，激发工作热情，增强团队意识，部门组织员工周末到袁家村进行了放松。</p>
-														<p>本次出游活动非常成功，大家都表示在紧张的工作之余，出游活动陶冶了身心，锻炼了身体，增加了交流，非常开心。相信经过这次活动，大家将会以更加饱满的热情投入到工作中去！</p>
-													<p>The outing activity was very successful, everybody said in the intense work, travel activities cultivate the body and mind, exercise the body, increase the communication, very happy.Believe that after this activity, we will be in a more full enthusiasm into work!.</p>
+														<p>来自不同团队的达人将通过这个平台与我们分享他们的技术能力</p>
+														<p>来自不同部门的卓越团队将通过这个平台向我们讲述他们的故事</p>
+														<p>来自外部的技术专家将通过这个平台向我们介绍技术发展趋势</p>
+														<p>Talents from different teams share their knowledge and technique here.</p>
+														<p>Excellent project teams from various departments share their good practices and experiences here.</p>
+														<p>External Subject Matter Experts (SME) are invited to share industry business and technology trend here. </p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/23.jpg" alt="">
+														<img src="images/juhui03.png" alt="">
 													</div>
 												</div>
 											</div>
@@ -209,34 +213,34 @@
 								<!-- Modal end -->
 							</div>
 
-							<div class="col-sm-6 col-md-3 isotope-item ">
+							<div class="col-sm-6 col-md-3 isotope-item app-development">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/sanba.jpg" alt="">
-										<a class="overlay" data-toggle="modal" data-target="#project-2">
+										<img src="images/6.jpg" alt="">
+										<a class="overlay" data-toggle="modal" data-target="#project-12">
 											<i class="fa fa-search-plus"></i>
-											<span>女王节快乐</span>
+											<span>敏捷赋能</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">三八活动</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-12">敏捷培训</a>
 								</div>
 								<!-- Modal -->
-								<div class="modal fade" id="project-2" tabindex="-1" role="dialog" aria-labelledby="project-2-label" aria-hidden="true">
+								<div class="modal fade" id="project-12" tabindex="-1" role="dialog" aria-labelledby="project-12-label" aria-hidden="true">
 									<div class="modal-dialog modal-lg">
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-2-label">"三八"系列活动</h4>
+												<h4 class="modal-title" id="project-12-label">敏捷经验交流</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>此次活动由部门男同事组织，全体女同胞参与其中。不仅响应了浓烈的节日气氛，还缓解了紧张繁忙的工作压力，更重要的是促进了友谊，加深了感情，使各位女同事充分感受到了节日带给她们的喜悦和快乐。真正为女员工身心健康办了实事、办了好事，提高了广大女员工的生活质量和幸福感，激励大家以更加饱满的热情、最佳的工作状态创造新的业绩，极大地增强了部门的凝聚力和向心力。</p>
-														<p>This activity organized by department male colleagues and all the women involved.Not only respond to the strong festive atmosphere, also eased the tension busy work pressure, more important is to promote the friendship, deepen the feelings, make your female colleagues fully felt the festival will bring them joy and happiness.True for female employees health of body and mind do the practical work, doing something good, to maximize the female staff's quality of life and well-being, motivate people to work more full of enthusiasm, the best state to create new achievements, greatly enhance the cohesion and centripetal force.</p>
+														<p>敏捷软件开发是以短周期迭代为核心，包含团队、工作件、管理和技术优秀实践的集合</p>
+														<p>Agile software development is a collection of team, work pieces, management and technical excellence, which is based on short cycle iteration</p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/24.jpg" alt="">
+														<img src="images/26.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -248,6 +252,7 @@
 								</div>
 								<!-- Modal end -->
 							</div>
+
 
 							<div class="col-sm-6 col-md-3 isotope-item web-design">
 								<div class="image-box">
@@ -530,38 +535,35 @@
 								<!-- Modal end -->
 							</div>
 
-							<div class="col-sm-6 col-md-3 isotope-item site-building">
+							<div class="col-sm-6 col-md-3 isotope-item ">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/21.jpg" alt="">
-										<a class="overlay" data-toggle="modal" data-target="#project-10">
+										<img src="images/9.jpg" alt="">
+										<a class="overlay" data-toggle="modal" data-target="#project-1">
 											<i class="fa fa-search-plus"></i>
-											<span>Knownledge Building</span>
+											<span>袁家村</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-10">聚慧大讲堂开幕式</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">集体出游</a>
 								</div>
 								<!-- Modal -->
-								<div class="modal fade" id="project-10" tabindex="-1" role="dialog" aria-labelledby="project-10-label" aria-hidden="true">
+								<div class="modal fade" id="project-1" tabindex="-1" role="dialog" aria-labelledby="project-1-label" aria-hidden="true">
 									<div class="modal-dialog modal-lg">
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-10-label">集百家之长，成一家之言，寻智慧之巅</h4>
+												<h4 class="modal-title" id="project-1-label">袁家村一日游</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>来自不同团队的达人将通过这个平台与我们分享他们的技术能力</p>
-														<p>来自不同部门的卓越团队将通过这个平台向我们讲述他们的故事</p>
-														<p>来自外部的技术专家将通过这个平台向我们介绍技术发展趋势</p>
-														<p>Talents from different teams share their knowledge and technique here.</p>
-														<p>Excellent project teams from various departments share their good practices and experiences here.</p>
-														<p>External Subject Matter Experts (SME) are invited to share industry business and technology trend here. </p>
+														<p>春暖花开，正是出游的好时节！为了丰富员工的业余文化生活，增进员工之间的相互交流与沟通，激发工作热情，增强团队意识，部门组织员工周末到袁家村进行了放松。</p>
+														<p>本次出游活动非常成功，大家都表示在紧张的工作之余，出游活动陶冶了身心，锻炼了身体，增加了交流，非常开心。相信经过这次活动，大家将会以更加饱满的热情投入到工作中去！</p>
+														<p>The outing activity was very successful, everybody said in the intense work, travel activities cultivate the body and mind, exercise the body, increase the communication, very happy.Believe that after this activity, we will be in a more full enthusiasm into work!.</p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/juhui03.png" alt="">
+														<img src="images/23.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -616,34 +618,35 @@
 								<!-- Modal end -->
 							</div>
 
-							<div class="col-sm-6 col-md-3 isotope-item app-development">
+
+							<div class="col-sm-6 col-md-3 isotope-item ">
 								<div class="image-box">
 									<div class="overlay-container">
-										<img src="images/6.jpg" alt="">
-										<a class="overlay" data-toggle="modal" data-target="#project-12">
+										<img src="images/sanba.jpg" alt="">
+										<a class="overlay" data-toggle="modal" data-target="#project-2">
 											<i class="fa fa-search-plus"></i>
-											<span>敏捷赋能</span>
+											<span>女王节快乐</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-12">敏捷培训</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">三八活动</a>
 								</div>
 								<!-- Modal -->
-								<div class="modal fade" id="project-12" tabindex="-1" role="dialog" aria-labelledby="project-12-label" aria-hidden="true">
+								<div class="modal fade" id="project-2" tabindex="-1" role="dialog" aria-labelledby="project-2-label" aria-hidden="true">
 									<div class="modal-dialog modal-lg">
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-12-label">敏捷经验交流</h4>
+												<h4 class="modal-title" id="project-2-label">"三八"系列活动</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>敏捷软件开发是以短周期迭代为核心，包含团队、工作件、管理和技术优秀实践的集合</p>
-														<p>Agile software development is a collection of team, work pieces, management and technical excellence, which is based on short cycle iteration</p>
+														<p>此次活动由部门男同事组织，全体女同胞参与其中。不仅响应了浓烈的节日气氛，还缓解了紧张繁忙的工作压力，更重要的是促进了友谊，加深了感情，使各位女同事充分感受到了节日带给她们的喜悦和快乐。真正为女员工身心健康办了实事、办了好事，提高了广大女员工的生活质量和幸福感，激励大家以更加饱满的热情、最佳的工作状态创造新的业绩，极大地增强了部门的凝聚力和向心力。</p>
+														<p>This activity organized by department male colleagues and all the women involved.Not only respond to the strong festive atmosphere, also eased the tension busy work pressure, more important is to promote the friendship, deepen the feelings, make your female colleagues fully felt the festival will bring them joy and happiness.True for female employees health of body and mind do the practical work, doing something good, to maximize the female staff's quality of life and well-being, motivate people to work more full of enthusiasm, the best state to create new achievements, greatly enhance the cohesion and centripetal force.</p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/26.jpg" alt="">
+														<img src="images/24.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -655,7 +658,6 @@
 								</div>
 								<!-- Modal end -->
 							</div>
-
 						</div>
 						<!-- portfolio items end -->
 
