--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -134,7 +134,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<h1 class="text-center"><span>能力中心</span>技术</h1>
-							<p class="lead">为各个交付部进行技术沉淀提供工具和方法论指导，拉通各个交付部的技术培训资源，以达到共享资源，快速复制技术能力的目的</p>
+							<p class="lead">为各个交付部进行技术沉淀提供工具和方法论指导，拉通各个交付部的技术培训资源，以达到共享资源，快速复制技术能力的目的。</p>
 						</div>
 					</div>
 				</div>
