--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -144,18 +144,22 @@
 
 		<div class="section" id="trainingService">
 			<div class="container">
-				<h1 class="text-center title" >技术服务目录</h1>
+				<h1 class="text-center title" >技术服务场景</h1>
 				<div class="separator"></div>
 
 				<div class="row">
-					<!-- <div class="col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ducimus explicabo quibusdam temporibus deserunt doloremque pariatur ea, animi a. Delectus similique atque eligendi, enim vel reiciendis deleniti neque aliquid, sit?</p>
-                        <p>Vitae dolores quam magnam accusantium nam, voluptatibus expedita delectus, dolorum odio magni ut nemo nihil ex earum pariatur molestias velit eveniet, facere autem saepe aut. Ut minima itaque porro facere. Cumque vitae autem, dignissimos molestiae necessitatibus culpa aliquam deleniti soluta sunt voluptatibus tenetur, unde dolorem eligendi doloribus quibusdam facere totam. Possimus atque deserunt numquam aliquam magnam, facilis officiis illo alias ipsa voluptas laborum, praesentium eveniet nobis velit voluptatem odio eligendi, corporis et iste distinctio! Repellendus, id, ad.</p>
-                    </div> -->
 
+					<div class="filters text-center">
+						<ul class="nav nav-pills">
+							<li class="active"><a href="#" data-filter="*">全部</a></li>
+							<li><a href="#" data-filter=".web-design">行业技术沉淀</a></li>
+							<li><a href="#" data-filter=".app-development">HSBC技术方案沉淀</a></li>
+							<li><a href="#" data-filter=".site-building">新能力导入</a></li>
+							<li><a href="#" data-filter=".tech-building">技术赋能</a></li>
+						</ul>
+					</div>
 
-         <div id="team-wrapper" class="bgrid-fourth s-bgrid-third tab-bgrid-half mob-bgrid-whole group">
+         <div class="isotope-container row grid-space-20">
 							<div class="col-sm-6 col-md-3 isotope-item web-design">
 								<div class="image-box">
 									<div class="overlay-container">
@@ -196,7 +200,7 @@
 								</div>
 								<!-- Modal end -->
 							</div>
-							<div class="col-sm-6 col-md-3 isotope-item web-design">
+							<div class="col-sm-6 col-md-3 isotope-item app-development">
 								<div class="image-box">
 									<div class="overlay-container">
 										<img src="images/teacnical/member03-k.jpg" alt=""/>
@@ -236,7 +240,7 @@
 								</div>
 								<!-- Modal end -->
 							</div>
-							<div class="col-sm-6 col-md-3 isotope-item web-design">
+							<div class="col-sm-6 col-md-3 isotope-item site-building">
 								<div class="image-box">
 									<div class="overlay-container">
 										<img src="images/teacnical/member04-k.jpg" alt=""/>
@@ -279,7 +283,7 @@
 								</div>
 								<!-- Modal end -->
 							</div>
-							<div class="col-sm-6 col-md-3 isotope-item web-design">
+							<div class="col-sm-6 col-md-3 isotope-item tech-building">
 								<div class="image-box">
 									<div class="overlay-container">
 										<img src="images/teacnical/member05-k.jpg" alt=""/>
@@ -329,9 +333,13 @@
 
 		 <!-- end team-wrapper -->
 
-      </div>
+			</div>
+		</div>
 
-		  
+		<div class="section" id="trainingService">
+			<div class="container">
+				<h1 class="text-center title" >技术服务目录</h1>
+				<div class="separator"></div>
 	  <div class="col-md-12">
 						<div class="panel-group" id="trainingAccordion" role="tablist" aria-multiselectable="true">
 							<div class="panel panel-default" style="margin-top:25px">
@@ -795,6 +803,9 @@
 							</div>
 							</div>
 						</div>
+					</div>
+					</div>
+					</div>
 					</div>
 			    </div>
 		</div>
