change international page

--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -345,12 +345,12 @@
 							<div class="panel panel-default" style="margin-top:25px">
 								<div class="panel-heading" role="tab" id="trainingHeading1">
 									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1">
+										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="false" aria-controls="trainingCollapse1" class="collapsed">
 											行业技术沉淀
 										</a>
 									</h4>
 								</div>
-								<div id="trainingCollapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="trainingHeading1">
+								<div id="trainingCollapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading1">
 									<div class="panel-body">
 													<div class="row">
 														<div class="col-md-2">
@@ -479,7 +479,7 @@
 							<div class="panel panel-default">
 							<div class="panel-heading" role="tab" id="trainingHeading4">
 								<h4 class="panel-title">
-									<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse4" aria-expanded="false" aria-controls="trainingCollapse4">
+									<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse4" aria-expanded="true" aria-controls="trainingCollapse4">
 										前端技术赋能
 									</a>
 								</h4>
