修改错别字

--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -336,7 +336,7 @@
 			</div>
 		</div>
 
-		<div class="section" id="trainingService">
+		<div class="section" id="trainingService1">
 			<div class="container">
 				<h1 class="text-center title" >技术服务目录</h1>
 				<div class="separator"></div>
