fix picture size

--- a/src/main/webapp/service3.html
+++ b/src/main/webapp/service3.html
@@ -570,12 +570,12 @@
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="trainingHeading1">
 									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1">
+										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="false" aria-controls="trainingCollapse1" class="collapsed">
 											敏捷赋能
 										</a>
 									</h4>
 								</div>
-								<div id="trainingCollapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="trainingHeading1">
+								<div id="trainingCollapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading1">
 									<div class="panel-body">
 										<div class="table-responsive">
 											<table class="table">
