--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -587,7 +587,7 @@
 
 	<div class="section" id="new">
 		<div class="container">
-			<h1 class="text-center title" id="portfolio">HSBC业务线解决方案服务目录</h1>
+			<h1 class="text-center title" id="portfolio">HSBC业务线解决方案</h1>
 			<div class="separator"></div>
 			<br>
 			<div class="row object-non-visible animated object-visible fadeIn"
