修改创新管理

--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -200,7 +200,7 @@
 														<p>External Subject Matter Experts (SME) are invited to share industry business and technology trend here. </p>
 													</div>
 													<div class="col-md-6">
-														<img src="images/juhui03.png" alt="">
+														<img src="images/juhui03.jpg" alt="">
 													</div>
 												</div>
 											</div>
@@ -236,8 +236,8 @@
 												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>敏捷软件开发是以短周期迭代为核心，包含团队、工作件、管理和技术优秀实践的集合</p>
-														<p>Agile software development is a collection of team, work pieces, management and technical excellence, which is based on short cycle iteration</p>
+														<p>敏捷软件开发是以短周期迭代为核心，包含团队、工作件、管理和技术优秀实践的集合。</p>
+														<p>Agile software development is a collection of team, work pieces, management and technical excellence, which is based on short cycle iteration.</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/26.jpg" alt="">
@@ -398,7 +398,7 @@
 												<h3>Activity Description</h3>
 												<div class="row">
 													<div class="col-md-6">
-														<p>3月20日，我部门举办了pbox的启动会。在轻松愉悦的氛围下，大家发表了各自的看法，提出了不同形式的创新方案。这一次，通过多人合作、敏捷的模式提供了一个完全自主的创作环境。大家开心的一起合影，希望永远留住这些美好瞬间。 </p>
+														<p>3月20日，我部门举办了pbox的启动会。在轻松愉悦的氛围下，大家发表了各自的看法，提出了不同形式的创新方案。这一次，通过多人合作、敏捷的模式提供了一个完全自主的创作环境。大家开心的一起合影，希望永远留住这美好瞬间。 </p>
 														<p>In March 20th, my department held a pbox startup. In a relaxed atmosphere, we have changed their views, put forward different forms of innovation. This time, through a multi player, agile model provides a completely independent creative environment. Big machine happy together photo, I hope to keep these beautiful moments.</p>
 													</div>
 													<div class="col-md-6">
