提交大家的修改

--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -345,12 +345,12 @@
 							<div class="panel panel-default" style="margin-top:25px">
 								<div class="panel-heading" role="tab" id="trainingHeading1">
 									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="false" aria-controls="trainingCollapse1" class="collapsed">
+										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1">
 											行业技术沉淀
 										</a>
 									</h4>
 								</div>
-								<div id="trainingCollapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading1">
+								<div id="trainingCollapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="trainingHeading1">
 									<div class="panel-body">
 													<div class="row">
 														<div class="col-md-2">
@@ -479,7 +479,7 @@
 							<div class="panel panel-default">
 							<div class="panel-heading" role="tab" id="trainingHeading4">
 								<h4 class="panel-title">
-									<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse4" aria-expanded="true" aria-controls="trainingCollapse4">
+									<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse4" aria-expanded="false" aria-controls="trainingCollapse4">
 										前端技术赋能
 									</a>
 								</h4>
@@ -796,6 +796,154 @@
 													<td></td>
 												</tr>
 
+												</tbody>
+											</table>
+										</div>
+								</div>
+
+							</div>
+							</div>
+							<div class="panel panel-default">
+							<div class="panel-heading" role="tab" id="trainingHeading7">
+								<h4 class="panel-title">
+									<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse7" aria-expanded="false" aria-controls="trainingCollapse7">
+										测试技术赋能
+									</a>
+								</h4>
+							</div>
+							<div id="trainingCollapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading7">
+								<div class="panel-body">
+										<div class="table-responsive">
+											<table class="table">
+												<caption></caption>
+												<thead>
+												<tr>
+
+													<th>课程名称</th>
+													<th>培训讲师</th>
+													<th>提供交付部</th>
+													<th>课程时长</th>
+													<th>内容简介</th>
+												</thead>
+												<tbody>
+												<tr>
+													<td>软件测试及软件测试缺陷的基本概念</td>
+
+													<td>陶爱华</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td>1)为什么要进行软件测试</br>
+														2)软件开发的模型</br>
+														3)软件测试模型</td>
+												</tr>
+
+												<tr>
+													<td>软件测试的方法</td>
+
+													<td>陶爱华</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td>1)软件测试的分类</br>
+														2)功能测试的方法</td>
+												</tr>
+												<tr>
+													<td>软件测试用的设计和缺陷</td>
+													<td>陶爱华</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td>1)软件测试的基本过程</br>
+													    2)软件测试设计技术</br>
+														3)软件的缺陷管理</td></tr>
+												<tr>
+													<td>自动化测试的基本概念</td>
+													<td>陶爱华</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td></td></tr>
+												<tr>
+													<td>Java面向对象编程的基本概念</td>
+													<td>毛贵锋</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Java构造函数、多态性</td>
+													<td>程文博</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Java 接口、抽象类和类</td>
+													<td>董晖</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Java 集合和枚举</td>
+													<td>杨志奇</td>
+													<td> </td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Selenium基础概念</td>
+													<td>刘文杰</td>
+													<td>财富管理</td>
+													<td>1个小时</td>
+													<td>1)Selenium IDE和Webdriver安装</br>
+													    2)Selenium IDE的使用</br>
+														3)Selenium常用命令</br>
+														4)WebDriver的使用</td>
+												</tr>
+												<tr>
+													<td>xPath的使用</td>
+													<td>刘文杰</td>
+													<td>财富管理</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>HSBC目前的几种自动化测试框架介绍</td>
+													<td>刘文杰</td>
+													<td>财富管理</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>性能测试简介</td>
+													<td></td>
+													<td>财富管理</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>性能测试的实践</td>
+													<td></td>
+													<td>财富管理</td>
+													<td>1个小时</td>
+													<td>1)性能测试的设计</br>
+													2)性能测试的分析</td>
+												</tr>
+												<tr>
+													<td>白盒测试基础概念和方法</td>
+													<td> </td>
+													<td> </td>
+													<td>1个小时</td>
+													<td>1)静态测试方法</br>
+													2)逻辑覆盖方法</br>
+													3)数据流分析</td>
+												</tr>
+												<tr>
+													<td>单元测试概念和方法</td>
+													<td> </td>
+													<td> </td>
+													<td>1个小时</td>
+													<td>1)单元测试房方法</br>
+													2)插桩技术</td>
+												</tr>
 												</tbody>
 											</table>
 										</div>
