--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -522,7 +522,15 @@
 
 </footer>
 <!-- footer end -->
-
+<!--网站流量统计-->
+<script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
+<noscript>
+    <a href="http://www.51.la/?19148250" target="_blank">
+    <img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" />
+    </a>
+</noscript>
+<script language="javascript" type="text/javascript" src="http://quote.51.la/?id=19148250&amp;mb=3"></script>
+<!--网站流量统计结束-->
 <!-- JavaScript files placed at the end of the document so the pages load faster
 ================================================== -->
 <!-- Jquery and Bootstap core js files -->
