--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -38,7 +38,6 @@
 		<!-- scrollToTop -->
 		<!-- ================ -->
 		<div class="scrollToTop"><i class="icon-up-open-big"></i></div>
-
 		<!-- header start -->
 		<!-- ================ -->
 		<header class="header fixed clearfix navbar navbar-fixed-top">
@@ -138,23 +137,18 @@
 			</div>
 		</div>
 		<!-- banner end -->
-
-		<div class="section" id="">
+		<div class="" id="">
 			<div class="container">
-
 				<div class="row">
 					<div class="section" id="new">
 						<div class="container">
-							<h1 class="text-center title" id="portfolio">业务服务</h1>
+							<h1 class="text-center title" id="portfolio">业务服务场景</h1>
 							<div class="separator"></div>
 							<p class="lead text-center">欢迎大家了解更多的银行业务。</p>
-							<br>
 							<div class="row object-non-visible animated object-visible fadeIn" data-animation-effect="fadeIn">
 								<div class="col-md-12">
-
 									<!-- isotope filters start -->
 									<!-- isotope filters end -->
-
 									<!-- portfolio items start -->
 									<div class="isotope-container row grid-space-20" style="position: relative; height: 791px;">
 										<div class="col-sm-6 col-md-3 isotope-item web-design">
@@ -168,10 +162,8 @@
 												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-1">零售银行</a>
 											</div>
 											<!-- Modal -->
-
 											<!-- Modal end -->
 										</div>
-
 										<div class="col-sm-6 col-md-3 isotope-item app-development">
 											<div class="image-box">
 												<div class="overlay-container">
@@ -183,13 +175,9 @@
 												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-2">商业银行</a>
 											</div>
 											<!-- Modal -->
-
 											<!-- Modal end -->
 										</div> 
-
 										<div class="col-sm-6 col-md-3 isotope-item web-design">
-										
-										
 											<div class="image-box">
 												<div class="overlay-container">
 													<img src="business/GPB.jpg" alt="">
@@ -200,7 +188,6 @@
 												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-3">私人银行</a>
 											</div>
 											<!-- Modal -->
-
 											<!-- Modal end -->
 										</div>
 										<div class="col-sm-6 col-md-3 isotope-item site-building">
@@ -214,22 +201,17 @@
 												<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">全球投资银行</a>
 											</div>
 											<!-- Modal -->
-
 											<!-- Modal end -->
 										</div>
-
 									</div>
 									<!-- portfolio items end -->
-
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
 		    </div>
 		</div>
-
 		<div class="modal fade" id="project-1" tabindex="-1" role="dialog" aria-labelledby="project-1-label" aria-hidden="true">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
@@ -337,6 +319,104 @@
 						<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class=" " id="trainingService1">
+			<div class="container">
+				<h1 class="text-center title" >技术服务目录</h1>
+				<div class="separator"></div>
+					<div class="col-md-12">
+						<div class="panel-group" id="trainingAccordion" role="tablist" aria-multiselectable="true">
+							<div class="panel panel-default" style="margin-top:25px">
+								<div class="panel-heading" role="tab" id="trainingHeading1">
+									<h4 class="panel-title">
+										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1">
+											零售银行
+										</a>
+									</h4>
+								</div>
+								<div id="trainingCollapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading1">
+									<div class="panel-body">
+										<div class="col-md-4">
+											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">2. 微信银行 </a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">3. VTM</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="trainingHeading2">
+									<h4 class="panel-title">
+										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse2" aria-expanded="false" aria-controls="trainingCollapse2">
+											商业银行
+										</a>
+									</h4>
+								</div>
+								<div id="trainingCollapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading2">
+									<div class="panel-body">
+										<div class="col-md-4">
+											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">2. 微信银行 </a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">3. VTM</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="trainingHeading3">
+									<h4 class="panel-title">
+										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse3" aria-expanded="false" aria-controls="trainingCollapse3">
+											私人银行
+										</a>
+									</h4>
+								</div>
+								<div id="trainingCollapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading3">
+									<div class="panel-body">
+										<div class="col-md-4">
+											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">2. 微信银行 </a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">3. VTM</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="trainingHeading4">
+									<h4 class="panel-title">
+										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse4" aria-expanded="false" aria-controls="trainingCollapse4">
+											全球投资银行
+										</a>
+									</h4>
+								</div>
+								<div id="trainingCollapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading4">
+									<div class="panel-body">
+										<div class="col-md-4">
+											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">2. 微信银行 </a>
+										</div>
+										<div class="col-md-4">
+											<a href="" target="_blank">3. VTM</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 			</div>
 		</div>
 		<!-- JavaScript files placed at the end of the document so the pages load faster
