修改错别字

--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -277,7 +277,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-						<h4 class="modal-title" id="project-3-label">个人银行</h4>
+						<h4 class="modal-title" id="project-3-label">私人银行</h4>
 					</div>
 					<div class="modal-body">
 						<h3>业务范围</h3>
