--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -802,7 +802,11 @@
 						</div>
 
 					</div>
+
 					<!-- portfolio items end -->
+					<span class="more"
+						style="float: right; border-radius: 0; padding: 8px 20px; border: 1px solid #cacaca; color: #666666; font-size: 12px; text-transform: uppercase; font-weight: 300;">
+						<a href="http://117.78.38.89:8080/dokuwiki/doku.php?id=%E6%9C%8D%E5%8A%A1%E9%A1%B9:%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9C%8D%E5%8A%A1%E7%9B%AE%E5%BD%95#hsbc%E4%B8%9A%E5%8A%A1%E7%BA%BF%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9C%8D%E5%8A%A1%E7%9B%AE%E5%BD%95">Details</ a></span>
 
 				</div>
 			</div>
