修改错别字

--- a/src/main/webapp/service8.html
+++ b/src/main/webapp/service8.html
@@ -110,7 +110,7 @@
 											<li><a href="service3.html">敏捷</a></li>
 											<li><a href="service4.html">架构</a></li>
 											<li><a href="">创新</a></li>
-											<li><a href="">管理</a></li>
+											<li><a href="service6.html">管理</a></li>
 											<li><a href="service7.html">售前</a></li>
 											<li class="active"><a href="service8.html">国际化</a></li>
 										</ul>
@@ -1119,7 +1119,15 @@
 
 
 
-
+	<!--网站流量统计-->
+	<script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
+	<noscript>
+		<a href="http://www.51.la/?19148250" target="_blank">
+			<img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" />
+		</a>
+	</noscript>
+	<script language="javascript" type="text/javascript" src="http://quote.51.la/?id=19148250&amp;mb=3"></script>
+	<!--网站流量统计结束-->
 
 	<!-- JavaScript files placed at the end of the document so the pages load faster
 		================================================== -->
