--- a/src/main/webapp/service6.html
+++ b/src/main/webapp/service6.html
@@ -207,27 +207,27 @@
 								<div class="image-box">
 									<div class="overlay-container">
 										<img src="images/management02.jpg" alt="">
-										<a class="overlay" data-toggle="modal" data-target="#project-4">
+										<a class="overlay" data-toggle="modal" data-target="#project-5">
 											<i class="fa fa-search-plus"></i>
 											<span>人力资源管理赋能</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">人力资源管理赋能</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-5">人力资源管理赋能</a>
 								</div>
 								<!-- Modal -->
-								<div class="modal fade" id="project-4" tabindex="-1" role="dialog" aria-labelledby="project-4-label" aria-hidden="true">
+								<div class="modal fade" id="project-5" tabindex="-1" role="dialog" aria-labelledby="project-4-label" aria-hidden="true">
 									<div class="modal-dialog modal-lg">
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-4-label">人力资源管理赋能</h4>
+												<h4 class="modal-title" id="project-4-label1">人力资源管理赋能</h4>
 											</div>
 											<div class="modal-body">
 												<h3>人力资源管理赋能</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;能力中心可以帮助各职能部门各交付部进行人力资源管理知识的沉淀,并且通过孵化系统得以将人力资源管理能力快速复制。</p>
-														<p>&nbsp;&nbsp;&nbsp;&nbsp;当前能力中心正协助完成多方面人力资源管理能力的沉淀和赋能，包括：EHS管理，Release管理，RM日常工作赋能，产出核算管理，员工管理。</p>
+														<p>&nbsp;&nbsp;&nbsp;&nbsp;当前能力中心正协助完成多方面人力资源管理能力的沉淀和赋能，包括：EHS管理，Release管理，RM日常工作赋能，产出核算管理，员工管理，有效沟通等。</p>
 														</div>
 													<div class="col-md-6">
 														<img src="images/management02.jpg" alt="">
@@ -329,27 +329,33 @@
 												<tr>
 													<tr>
 													<td>
-													<a href="" target="_blank">EHS管理知识</a>
+													<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:1.ehs%E7%AE%A1%E7%90%86%E7%9F%A5%E8%AF%86" target="_blank">EHS管理知识</a>
 													</td>
 
 												</tr>
 												<tr>
 													<tr>
 													<td>
-													<a href="" target="_blank">Release管理知识</a>
+													<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:2.release%E7%AE%A1%E7%90%86%E7%9F%A5%E8%AF%86" target="_blank">Release管理知识</a>
 													</td>
 
 												</tr>
 												<tr>
 													<tr>
 													<td>
-													<a href="" target="_blank">RM日常工作赋能</a>
+													<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:3.rm%E6%97%A5%E5%B8%B8%E6%93%8D%E4%BD%9C%E7%9F%A5%E8%AF%86" target="_blank">RM日常工作赋能</a>
 													</td>
 
 												</tr>
 													<tr>
 													<td>
-													<a href="" target="_blank">员工管理基础知识</a>
+													<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:4.%E5%91%98%E5%B7%A5%E7%AE%A1%E7%90%86%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86" target="_blank">员工管理基础知识</a>
+													</td>
+
+												</tr>
+												<tr>
+													<td>
+													<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:5.%E6%9C%89%E6%95%88%E6%B2%9F%E9%80%9A" target="_blank">有效沟通</a>
 													</td>
 
 												</tr>
@@ -368,7 +374,15 @@
 				</div>
 			</div>
 		</div>
-
+		<!--网站流量统计-->
+		<script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
+		<noscript>
+			<a href="http://www.51.la/?19148250" target="_blank">
+				<img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" />
+			</a>
+		</noscript>
+		<script language="javascript" type="text/javascript" src="http://quote.51.la/?id=19148250&amp;mb=3"></script>
+		<!--网站流量统计结束-->
 		<!-- JavaScript files placed at the end of the document so the pages load faster
 		================================================== -->
 		<!-- Jquery and Bootstap core js files -->
