--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -108,7 +108,7 @@
 											<li><a href="service3.html">敏捷</a></li>
 											<li><a href="service4.html">架构</a></li>
 											<li><a href="">创新</a></li>
-											<li><a href="">管理</a></li>
+											<li><a href="service6.html">管理</a></li>
 											<li class="active"><a href="service7.html">售前</a></li>
 											<li><a href="service8.html">国际化</a></li>
 										</ul>
@@ -572,19 +572,6 @@
 	<!-- section start -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<div class="section" id="new">
 		<div class="container">
 			<h1 class="text-center title" id="portfolio">HSBC业务线解决方案</h1>
@@ -806,7 +793,7 @@
 					<!-- portfolio items end -->
 					<span class="more"
 						style="float: right; border-radius: 0; padding: 8px 20px; border: 1px solid #cacaca; color: #666666; font-size: 12px; text-transform: uppercase; font-weight: 300;">
-						<a href="http://117.78.38.89:8080/dokuwiki/doku.php?id=%E6%9C%8D%E5%8A%A1%E9%A1%B9:%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9C%8D%E5%8A%A1%E7%9B%AE%E5%BD%95#hsbc%E4%B8%9A%E5%8A%A1%E7%BA%BF%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9C%8D%E5%8A%A1%E7%9B%AE%E5%BD%95">Details</ a></span>
+						<a href="http://117.78.38.89:8080/dokuwiki/doku.php?id=%E6%9C%8D%E5%8A%A1%E9%A1%B9:%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9C%8D%E5%8A%A1%E7%9B%AE%E5%BD%95#hsbc%E4%B8%9A%E5%8A%A1%E7%BA%BF%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9C%8D%E5%8A%A1%E7%9B%AE%E5%BD%95">Details</a></span>
 
 				</div>
 			</div>
@@ -814,7 +801,15 @@
 	</div>
 
 
-
+	<!--网站流量统计-->
+	<script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
+	<noscript>
+		<a href="http://www.51.la/?19148250" target="_blank">
+			<img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" />
+		</a>
+	</noscript>
+	<script language="javascript" type="text/javascript" src="http://quote.51.la/?id=19148250&amp;mb=3"></script>
+	<!--网站流量统计结束-->
 	<!-- JavaScript files placed at the end of the document so the pages load faster
 		================================================== -->
 	<!-- Jquery and Bootstap core js files -->
