修改错别字

--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -330,7 +330,7 @@
 							<div class="panel panel-default" style="margin-top:25px">
 								<div class="panel-heading" role="tab" id="trainingHeading1">
 									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1">
+										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1" class="collapsed">
 											零售银行
 										</a>
 									</h4>
