--- a/src/main/webapp/service4.html
+++ b/src/main/webapp/service4.html
@@ -461,7 +461,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-md-4"><img src="images/juhui02.png" class="img-rounded"></div>
-                                                    <div class="col-md-4"><img src="images/juhui03.png" class="img-rounded"></div>
+                                                    <div class="col-md-4"><img src="images/juhui03.jpg" class="img-rounded"></div>
                                                     <div class="col-md-4"><img src="images/juhui04.png" class="img-rounded"></div>
                                                 </div>
 											</div>
@@ -551,7 +551,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="trainingHeading1">
                                     <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="false" aria-controls="trainingCollapse1">
+                                        <a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="false" aria-controls="trainingCollapse1" class="collapsed">
                                             架构团队建设
                                         </a>
                                     </h4>
