修改错别字

--- a/src/main/webapp/service4.html
+++ b/src/main/webapp/service4.html
@@ -461,7 +461,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-md-4"><img src="images/juhui02.png" class="img-rounded"></div>
-                                                    <div class="col-md-4"><img src="images/juhui03.jpg" class="img-rounded"></div>
+                                                    <div class="col-md-4"><img src="images/juhui05.png" class="img-rounded"></div>
                                                     <div class="col-md-4"><img src="images/juhui04.png" class="img-rounded"></div>
                                                 </div>
 											</div>
