update for aglie

--- a/src/main/webapp/service3.html
+++ b/src/main/webapp/service3.html
@@ -591,7 +591,7 @@
 												</thead>
 												<tbody>
 												<tr>
-													<td>敏捷基础</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:%E6%95%8F%E6%8D%B7%E5%9F%BA%E7%A1%80">敏捷基础</a></td>
 													<td>李华成</td>
 													<td></td>
 													<td>3H</td>
@@ -641,15 +641,15 @@
 												</thead>
 												<tbody>
 												<tr>
-													<td>敏捷咨询</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:%E6%95%8F%E6%8D%B7%E5%92%A8%E8%AF%A2">敏捷咨询</a></td>
 
 												</tr>
 												<tr>
-													<td>敏捷Coach</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:%E6%95%8F%E6%8D%B7coach">敏捷Coach</a></td>
 
 												</tr>
 												<tr>
-													<td>敏捷认证服务</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:%E6%95%8F%E6%8D%B7%E8%AE%A4%E8%AF%81%E6%9C%8D%E5%8A%A1">敏捷认证服务</a></td>
 
 												</tr>
 												
@@ -660,7 +660,46 @@
 								</div>
 							</div>
 
-							
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="trainingHeading6">
+									<h4 class="panel-title">
+										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse6" aria-expanded="false" aria-controls="trainingCollapse6">
+											集成环境搭建
+										</a>
+									</h4>
+								</div>
+								<div id="trainingCollapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="trainingHeading6">
+									<div class="panel-body">
+										<div class="table-responsive">
+											<table class="table">
+												<caption></caption>
+												<thead>
+												<tr>
+
+													<th>工具搭建</th>
+													<th>培训讲师</th>
+													<th>提供交付部</th>
+													<th>课程时长</th>
+													<th>内容简介</th>
+												</thead>
+												<tbody>
+												<tr>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:%E9%9B%86%E6%88%90%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA">集成环境搭建</a></td>
+													<td></td>
+													<td></td>
+													<td></td>
+													<td></td>
+												</tr>
+
+
+												</tbody>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+
+
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="trainingHeading5">
 									<h4 class="panel-title">
@@ -685,49 +724,49 @@
 												</thead>
 												<tbody>
 												<tr>
-													<td>TDD</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:tdd">TDD</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
 													<td></td>
 												</tr>
 												<tr>
-													<td>BDD</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:bdd">BDD</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
 													<td></td>
 												</tr>
 												<tr>
-													<td>Sonar</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:sonar">Sonar</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
 													<td></td>
 												</tr>
 												<tr>
-													<td>Git</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:git">Git</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
 													<td></td>
 												</tr>
 												<tr>
-													<td>Maven</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:maven">Maven</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
 													<td></td>
 												</tr>
 												<tr>
-													<td>Jekins</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:jekins">Jekins</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
 													<td></td>
 												</tr>
 												<tr>
-													<td>AutoMation Testing</td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:automation_testing">AutoMation Testing</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
