--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -150,7 +150,7 @@
 			<div class="container">
 				<h1 class="text-center title" id="portfolio">最新活动</h1>
 				<div class="separator"></div>
-				<p class="lead text-center">欢迎大家参加各项活动！</p>
+				<p class="lead text-center">欢迎大家参加各项活动</p>
 				<br>
 				<div class="row object-non-visible" data-animation-effect="fadeIn">
 					<div class="col-md-12">
